--- a/Assets/UI/Pages/Catalogue/Catalogue.uss
+++ b/Assets/UI/Pages/Catalogue/Catalogue.uss
@@ -1,2 +1,10 @@
 .catalogue-list {
+    flex-grow: 1;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.unity-scroll-view__content-container {
+    flex-direction: row;
+    align-items: center;
 }
