--- a/Assets/UI/Components/FurnitureItem/FurnitureItem.uss
+++ b/Assets/UI/Components/FurnitureItem/FurnitureItem.uss
@@ -20,12 +20,13 @@
     border-right-width: 2px;
     border-bottom-width: 2px;
     border-left-width: 2px;
+    align-items: center;
 }
 
 .furniture-item > .unity-text-element {
     color: rgb(211, 211, 211);
     -unity-font-style: bold;
-    -unity-font-definition: url('project://database/Assets/Fonts/TitilliumWeb-Light.ttf?fileID=12800000&guid=6a0642339c4a2ba4cb39c97d06b258d6&type=3#TitilliumWeb-Light');
+    -unity-font-definition: url("project://database/Assets/Fonts/TitilliumWeb-Light.ttf?fileID=12800000&guid=6a0642339c4a2ba4cb39c97d06b258d6&type=3#TitilliumWeb-Light");
     font-size: 35px;
 }
 
